--- a/index.html
+++ b/index.html
@@ -3,84 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Compact Toolbar Dashboard</title>
+  <title>Dashboard with Popup Taskbar</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
     }
-    #dashboard {
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      width: 100%;
-      transition: transform 0.3s ease, width 0.3s ease;
-    }
-    #toolbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 60px; /* Adjusted to resemble a thin taskbar */
-      height: 100%;
-      background-color: #333;
-      display: none; /* Hidden by default */
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      transition: width 0.3s ease;
-    }
-    #toolbar button {
-      background: none;
-      border: none;
+    .open-toolbar-btn {
+      padding: 10px 20px;
+      background-color: #4CAF50;
       color: white;
-      font-size: 20px; /* Adjusted size for icons */
+      border: none;
+      border-radius: 5px;
       cursor: pointer;
     }
-    #toolbar button:hover {
-      color: #4CAF50;
-    }
-    .minimize-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      padding: 5px 10px;
-      background: #4CAF50;
-      border: none;
-      color: white;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-    #toolbar.small {
-      width: 40px; /* Smaller width for a compact taskbar style */
+    .open-toolbar-btn:hover {
+      background-color: #45a049;
     }
   </style>
 </head>
 <body>
-  <div id="dashboard">
-    <button class="minimize-btn" onclick="toggleToolbar()">Minimize</button>
-    <h1>Welcome to the Employee Dashboard</h1>
-    <p>This is where your dashboard content will appear.</p>
-  </div>
-  <div id="toolbar" class="small">
-    <button onclick="restoreDashboard()">☰</button>
-    <button>📂</button>
-    <button>⚙️</button>
-    <button>🔒</button>
-  </div>
+  <h1>Main Dashboard</h1>
+  <p>Click the button below to open the toolbar as a popup.</p>
+  <button class="open-toolbar-btn" onclick="openToolbar()">Open Toolbar</button>
+
   <script>
-    const dashboard = document.getElementById("dashboard");
-    const toolbar = document.getElementById("toolbar");
+    function openToolbar() {
+      // Open a popup window with specified dimensions
+      const popup = window.open(
+        "",
+        "Toolbar",
+        "width=200,height=600,top=100,left=10,resizable=no"
+      );
 
-    function toggleToolbar() {
-      dashboard.style.transform = "translateX(-100%)";
-      dashboard.style.width = "0"; /* Collapse the main content completely */
-      toolbar.style.display = "flex";
-    }
-
-    function restoreDashboard() {
-      dashboard.style.transform = "translateX(0)";
-      dashboard.style.width = "100%"; /* Restore the full width */
-      toolbar.style.display = "none";
+      // Add content to the popup window
+      popup.document.write(`
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+          <meta charset="UTF-8">
+          <title>Toolbar</title>
+          <style>
+            body {
+              margin: 0;
+              font-family: Arial, sans-serif;
+              background-color: #333;
+              color: white;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: space-around;
+              height: 100%;
+            }
+            button {
+              background: none;
+              border: none;
+              color: white;
+              font-size: 18px;
+              cursor: pointer;
+            }
+            button:hover {
+              color: #4CAF50;
+            }
+          </style>
+        </head>
+        <body>
+          <button onclick="alert('Feature 1')">📂 Files</button>
+          <button onclick="alert('Settings')">⚙️ Settings</button>
+          <button onclick="alert('Locked')">🔒 Lock</button>
+          <button onclick="window.close()">❌ Close Toolbar</button>
+        </body>
+        </html>
+      `);
     }
   </script>
 </body>
