--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       const popup = window.open(
         "",
         "Toolbar",
-        "width=200,height=600,top=100,left=10,resizable=no"
+        "width=60,height=300,top=100,left=10,resizable=no"
       );
 
       // Add content to the popup window
@@ -49,18 +49,18 @@
               margin: 0;
               font-family: Arial, sans-serif;
               background-color: #333;
-              color: white;
               display: flex;
               flex-direction: column;
               align-items: center;
               justify-content: space-around;
               height: 100%;
+              color: white;
             }
             button {
               background: none;
               border: none;
               color: white;
-              font-size: 18px;
+              font-size: 24px; /* Icon size */
               cursor: pointer;
             }
             button:hover {
@@ -69,10 +69,10 @@
           </style>
         </head>
         <body>
-          <button onclick="alert('Feature 1')">📂 Files</button>
-          <button onclick="alert('Settings')">⚙️ Settings</button>
-          <button onclick="alert('Locked')">🔒 Lock</button>
-          <button onclick="window.close()">❌ Close Toolbar</button>
+          <button onclick="parent.alert('Feature: Files opened in main page!')">📂</button>
+          <button onclick="parent.alert('Settings opened in main page!')">⚙️</button>
+          <button onclick="parent.alert('Locked!')">🔒</button>
+          <button onclick="window.close()">❌</button>
         </body>
         </html>
       `);
