--- a/html/assets.html
+++ b/html/assets.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Design Assets</title>
+    <link rel="stylesheet" href="../css/assets.css">
+    <script src="../js/assets.js" defer></script>
+</head>
+<body>
+    <div id="workspace">
+        <header>
+            <h1>Design Assets</h1>
+        </header>
+        <main>
+            <input type="file" id="uploadAsset" onchange="uploadAsset()">
+            <div id="assetGallery" class="asset-gallery"></div>
+        </main>
+    </div>
+</body>
+</html>
 
