--- a/html/collaboration.html
+++ b/html/collaboration.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Collaboration</title>
+    <link rel="stylesheet" href="../css/collaboration.css">
+    <script src="../js/collaboration.js" defer></script>
+</head>
+<body>
+    <div id="workspace">
+        <header>
+            <h1>Collaboration</h1>
+        </header>
+        <main>
+            <textarea id="collabNotes" placeholder="Write your notes here..."></textarea>
+        </main>
+    </div>
+</body>
+</html>
 
