--- a/html/tools.html
+++ b/html/tools.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quick Tools</title>
+    <link rel="stylesheet" href="../css/tools.css">
+    <script src="../js/tools.js" defer></script>
+</head>
+<body>
+    <div id="workspace">
+        <header>
+            <h1>Quick Tools</h1>
+        </header>
+        <main>
+            <button onclick="openColorPalette()">🎨 Color Palette</button>
+            <button onclick="openTypographyGuide()">🅰️ Typography Guide</button>
+            <button onclick="openShortcutManager()">⚡ Shortcut Manager</button>
+        </main>
+    </div>
+</body>
+</html>
 
