--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workspace</title>
+    <!-- Link to the global CSS -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Link to the global JS -->
     <script src="js/script.js" defer></script>
 </head>
 <body>
@@ -20,11 +22,12 @@
                 </div>
             </div>
             <nav>
-                <a href="html/projects.html">📁 Projects</a>
-                <a href="html/tasks.html">✔️ Tasks</a>
-                <a href="html/assets.html">📂 Assets</a>
-                <a href="html/collaboration.html">💬 Collaboration</a>
-                <a href="html/tools.html">🛠️ Tools</a>
+                <!-- Links updated for root directory structure -->
+                <a href="projects.html">📁 Projects</a>
+                <a href="tasks.html">✔️ Tasks</a>
+                <a href="assets.html">📂 Assets</a>
+                <a href="collaboration.html">💬 Collaboration</a>
+                <a href="tools.html">🛠️ Tools</a>
             </nav>
             <button id="dockToggle" onclick="toggleTaskbar()">Undock Taskbar</button>
         </aside>
