--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             </div>
             <nav>
                 <!-- Links updated for root directory structure -->
-                <a href="projects.html">📁 Projects</a>
-                <a href="tasks.html">✔️ Tasks</a>
-                <a href="assets.html">📂 Assets</a>
-                <a href="collaboration.html">💬 Collaboration</a>
-                <a href="tools.html">🛠️ Tools</a>
+                <a href="html/projects.html">📁 Projects</a>
+                <a href="html/tasks.html">✔️ Tasks</a>
+                <a href="html/assets.html">📂 Assets</a>
+                <a href="html/collaboration.html">💬 Collaboration</a>
+                <a href="html/tools.html">🛠️ Tools</a>
             </nav>
             <button id="dockToggle" onclick="toggleTaskbar()">Undock Taskbar</button>
         </aside>
