--- a/assets.html
+++ b/assets.html
@@ -4,19 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design Assets</title>
-    <link rel="stylesheet" href="../css/assets.css">
-    <script src="../js/assets.js" defer></script>
+    <link rel="stylesheet" href="css/assets.css">
+    <script src="js/assets.js" defer></script>
 </head>
 <body>
     <div id="workspace">
-        <header>
-            <h1>Design Assets</h1>
-        </header>
-        <main>
-            <input type="file" id="uploadAsset" onchange="uploadAsset()">
-            <div id="assetGallery" class="asset-gallery"></div>
+        <!-- Sidebar (Taskbar) -->
+        <aside id="taskbarDocked" class="taskbar">
+            <button id="collapseToggle" onclick="toggleSidebar()">☰</button>
+            <div class="profile">
+                <img src="https://via.placeholder.com/50" alt="Profile Picture" class="avatar">
+                <div class="info">
+                    <p id="username">John Doe</p>
+                    <p id="role">Designer</p>
+                </div>
+            </div>
+            <nav>
+                <a href="index.html" class="nav-item">🏠 Dashboard</a>
+                <a href="projects.html" class="nav-item">📁 Projects</a>
+                <a href="tasks.html" class="nav-item">✔️ Tasks</a>
+                <a href="assets.html" class="nav-item active">📂 Assets</a>
+                <a href="collaboration.html" class="nav-item">💬 Collaboration</a>
+                <a href="tools.html" class="nav-item">🛠️ Tools</a>
+            </nav>
+            <button id="dockToggle" onclick="toggleTaskbar()">Undock Taskbar</button>
+        </aside>
+
+        <!-- Main Content -->
+        <main id="workspaceContent">
+            <header class="sticky-header">
+                <h1>Design Assets</h1>
+            </header>
+            <div>
+                <input type="file" id="uploadAsset" onchange="uploadAsset()">
+                <button onclick="addFolder('New Folder')">Add Folder</button>
+                <div id="assetGallery" class="asset-gallery"></div>
+            </div>
         </main>
     </div>
 </body>
 </html>
-
